--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
       }
     ],
     "configuration": {
-      "python.analysis.extraPaths": {
-        "type": "array",
-        "default": [],
-        "description": "Additional paths to include for Python analysis."
+      "properties": {
+        "poetryHelper.appendExtraPaths": {
+          "type": "boolean",
+          "default": false,
+          "description": "Option to append the extra path instead of replacing. set true to retail any extraPaths you need"
+        }
       }
     }
   },
@@ -38,14 +40,17 @@
     "test": "vscode-test"
   },
   "devDependencies": {
-    "@types/vscode": "^1.85.0",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
+    "@types/vscode": "^1.85.0",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
-    "eslint": "^8.56.0",
-    "typescript": "^5.3.3",
     "@vscode/test-cli": "^0.0.4",
-    "@vscode/test-electron": "^2.3.8"
+    "@vscode/test-electron": "^2.3.8",
+    "eslint": "^8.56.0",
+    "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@vscode/python-extension": "^1.0.5"
   }
 }
